--- a/icons/lib/demo.html
+++ b/icons/lib/demo.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="https://gtms04.alicdn.com/tps/i4/TB1_oz6GVXXXXaFXpXXJDFnIXXX-64-64.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="https://g.alicdn.com/thx/cube/1.3.2/cube.min.css">
   <link rel="stylesheet" href="demo.css">
-  <link rel="stylesheet" href="mn-icons.css">
+  <link rel="stylesheet" href="mustom-next-icons.css">
   <script src="iconfont.js"></script>
   <!-- jQuery -->
   <script src="https://a1.alicdn.com/oss/uploads/2018/12/26/7bfddb60-08e8-11e9-9b04-53e73bb6408b.js"></script>
@@ -27,11 +27,11 @@
         <ul class="icon_lists dib-box">
           
             <li class="dib">
-              <span class="icon mn-icon mn-ma-jinyao"></span>
+              <span class="icon mi mi-ma-jinyao"></span>
               <div class="name">
                 ma-jinyao
               </div>
-              <div class="code-name">.mn-ma-jinyao
+              <div class="code-name">.mi-ma-jinyao
               </div>
             </li>
           
@@ -51,14 +51,14 @@
         </ul>
         <p>使用步骤如下：</p>
         <h3 id="-fontclass-">第一步：引入项目下面生成的 fontclass 代码：</h3>
-<pre><code class="language-html">&lt;link rel="stylesheet" href="./mn-icons.css"&gt;
+<pre><code class="language-html">&lt;link rel="stylesheet" href="./mustom-next-icons.css"&gt;
 </code></pre>
         <h3 id="-">第二步：挑选相应图标并获取类名，应用于页面：</h3>
-<pre><code class="language-html">&lt;span class="mn-icon mn-xxx"&gt;&lt;/span&gt;
+<pre><code class="language-html">&lt;span class="mi mi-xxx"&gt;&lt;/span&gt;
 </code></pre>
         <blockquote>
           <p>"
-            mn-icons" 是你项目下的 font-family。可以通过编辑项目查看，默认是 "mn-icons"。</p>
+            mustom-next-icons" 是你项目下的 font-family。可以通过编辑项目查看，默认是 "mustom-next-icons"。</p>
         </blockquote>
       </div>
       </div>
